@@ -104,6 +104,8 @@
 
 * Emulates Phoenix
 
+* Emulates Defcon
+
 * Emulates Datagear/MB02 DMA, ZX-Uno DMA
 
 * Emulates +3 Disk
