@@ -104,6 +104,8 @@
 
 * Emula Phoenix
 
+* Emula Defcon
+
 * Emula Datagear/MB02 DMA, ZX-Uno DMA
 
 * Emula Disco +3
