@@ -119,11 +119,13 @@ que tiene una funcion de entrada asociada. como indicar esto? en un parámetro d
 -otros dispositivos copiadores: https://microhobby.speccy.cz/mhf/195/MH195_21.jpg
 https://worldofspectrum.net/pub/sinclair/games-info/d/Discopack+3.pdf
 
+-disciple
 
 dynamid 3
 -https://foro.speccy.org/viewtopic.php?t=4997
 -https://www.va-de-retro.com/foros/viewtopic.php?t=693&start=40
 
 interface 007? https://github.com/alvaroalea/Interface007 clon de dynamid3???
+https://www.va-de-retro.com/foros/viewtopic.php?f=63&t=693&start=70
  
 - ajustar memory zones para zx81: rom deberia ser 8kb. revisar tambien zx80
